--- a/package.json
+++ b/package.json
@@ -7,23 +7,46 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack serve --open",
-    "create": "webpack"
+    "build": "webpack"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
     "@babel/plugin-transform-async-to-generator": "^7.13.0",
+    "@babel/plugin-transform-typescript": "^7.13.0",
     "@babel/preset-env": "^7.12.17",
     "@babel/preset-react": "^7.12.13",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.2",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.5.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
+    "prettier": "^2.2.1",
+    "source-map-loader": "^2.0.1",
     "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.17",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
+    "typescript": "^4.1.5",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "core-js": "^3.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
